[spans] Close open subpaths when filling with a scan converter.

As reported by Christian Persch, open subpaths weren't being
closed when rendering to an image surface:

http://bugs.freedesktop.org/show_bug.cgi?id=19240